# causal-pathway-scrap-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: synthetic_injection_molding_demo.csv
src/datathon_showcase/: __init__.py  config.py  reporting.py  run_showcase.py  scoring.py
