[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datathon-causal-showcase"
version = "0.1.0"
description = "Causal pathway-based intervention showcase for scrap reduction"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Datathon 2026 Showcase" }
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
